Fixed all flaws and added new pages for charts and analysis